--- a/scss/style.css
+++ b/scss/style.css
@@ -45,135 +45,261 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1 {
   position: relative;
   min-height: 1px;
   padding-left: 10px;
   padding-right: 10px; }
 
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+.col-xs-1 {
+  float: left; }
+
+.col-xs-2, .col-sm-2, .col-md-2, .col-lg-2 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-2 {
+  float: left; }
+
+.col-xs-3, .col-sm-3, .col-md-3, .col-lg-3 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-3 {
+  float: left; }
+
+.col-xs-4, .col-sm-4, .col-md-4, .col-lg-4 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-4 {
+  float: left; }
+
+.col-xs-5, .col-sm-5, .col-md-5, .col-lg-5 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-5 {
+  float: left; }
+
+.col-xs-6, .col-sm-6, .col-md-6, .col-lg-6 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-6 {
+  float: left; }
+
+.col-xs-7, .col-sm-7, .col-md-7, .col-lg-7 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-7 {
+  float: left; }
+
+.col-xs-8, .col-sm-8, .col-md-8, .col-lg-8 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-8 {
+  float: left; }
+
+.col-xs-9, .col-sm-9, .col-md-9, .col-lg-9 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-9 {
+  float: left; }
+
+.col-xs-10, .col-sm-10, .col-md-10, .col-lg-10 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-10 {
+  float: left; }
+
+.col-xs-11, .col-sm-11, .col-md-11, .col-lg-11 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-11 {
+  float: left; }
+
+.col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.col-xs-12 {
   float: left; }
 
 @media (min-width: 768px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left; }
-
-  .col-sm-12 {
-    width: 100%; }
-
-  .col-sm-11 {
-    width: 91.66666667%; }
-
-  .col-sm-10 {
-    width: 83.33333333%; }
-
-  .col-sm-9 {
-    width: 75%; }
-
-  .col-sm-8 {
-    width: 66.66666667%; }
-
-  .col-sm-7 {
-    width: 58.33333333%; }
-
-  .col-sm-6 {
-    width: 50%; }
-
-  .col-sm-5 {
-    width: 41.66666667%; }
-
-  .col-sm-4 {
-    width: 33.33333333%; }
-
-  .col-sm-3 {
-    width: 25%; }
+  .col-sm-1 {
+    float: left;
+    width: 8.3333333333%; }
 
   .col-sm-2 {
-    width: 16.66666667%; }
+    float: left;
+    width: 16.6666666667%; }
 
-  .col-sm-1 {
-    width: 8.33333333%; } }
-@media (min-width: 992px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left; }
+  .col-sm-3 {
+    float: left;
+    width: 25%; }
 
-  .col-md-12 {
-    width: 100%; }
+  .col-sm-4 {
+    float: left;
+    width: 33.3333333333%; }
 
-  .col-md-11 {
-    width: 91.66666667%; }
+  .col-sm-5 {
+    float: left;
+    width: 41.6666666667%; }
 
-  .col-md-10 {
-    width: 83.33333333%; }
-
-  .col-md-9 {
-    width: 75%; }
-
-  .col-md-8 {
-    width: 66.66666667%; }
-
-  .col-md-7 {
-    width: 58.33333333%; }
-
-  .col-md-6 {
+  .col-sm-6 {
+    float: left;
     width: 50%; }
 
-  .col-md-5 {
-    width: 41.66666667%; }
+  .col-sm-7 {
+    float: left;
+    width: 58.3333333333%; }
 
-  .col-md-4 {
-    width: 33.33333333%; }
+  .col-sm-8 {
+    float: left;
+    width: 66.6666666667%; }
 
-  .col-md-3 {
-    width: 25%; }
+  .col-sm-9 {
+    float: left;
+    width: 75%; }
+
+  .col-sm-10 {
+    float: left;
+    width: 83.3333333333%; }
+
+  .col-sm-11 {
+    float: left;
+    width: 91.6666666667%; }
+
+  .col-sm-12 {
+    float: left;
+    width: 100%; } }
+@media (min-width: 992px) {
+  .col-md-1 {
+    float: left;
+    width: 8.3333333333%; }
 
   .col-md-2 {
-    width: 16.66666667%; }
+    float: left;
+    width: 16.6666666667%; }
 
-  .col-md-1 {
-    width: 8.33333333%; } }
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left; }
-
-  .col-lg-12 {
-    width: 100%; }
-
-  .col-lg-11 {
-    width: 91.66666667%; }
-
-  .col-lg-10 {
-    width: 83.33333333%; }
-
-  .col-lg-9 {
-    width: 75%; }
-
-  .col-lg-8 {
-    width: 66.66666667%; }
-
-  .col-lg-7 {
-    width: 58.33333333%; }
-
-  .col-lg-6 {
-    width: 50%; }
-
-  .col-lg-5 {
-    width: 41.66666667%; }
-
-  .col-lg-4 {
-    width: 33.33333333%; }
-
-  .col-lg-3 {
+  .col-md-3 {
+    float: left;
     width: 25%; }
 
-  .col-lg-2 {
-    width: 16.66666667%; }
+  .col-md-4 {
+    float: left;
+    width: 33.3333333333%; }
 
+  .col-md-5 {
+    float: left;
+    width: 41.6666666667%; }
+
+  .col-md-6 {
+    float: left;
+    width: 50%; }
+
+  .col-md-7 {
+    float: left;
+    width: 58.3333333333%; }
+
+  .col-md-8 {
+    float: left;
+    width: 66.6666666667%; }
+
+  .col-md-9 {
+    float: left;
+    width: 75%; }
+
+  .col-md-10 {
+    float: left;
+    width: 83.3333333333%; }
+
+  .col-md-11 {
+    float: left;
+    width: 91.6666666667%; }
+
+  .col-md-12 {
+    float: left;
+    width: 100%; } }
+@media (min-width: 1200px) {
   .col-lg-1 {
-    width: 8.33333333%; } }
+    float: left;
+    width: 8.3333333333%; }
+
+  .col-lg-2 {
+    float: left;
+    width: 16.6666666667%; }
+
+  .col-lg-3 {
+    float: left;
+    width: 25%; }
+
+  .col-lg-4 {
+    float: left;
+    width: 33.3333333333%; }
+
+  .col-lg-5 {
+    float: left;
+    width: 41.6666666667%; }
+
+  .col-lg-6 {
+    float: left;
+    width: 50%; }
+
+  .col-lg-7 {
+    float: left;
+    width: 58.3333333333%; }
+
+  .col-lg-8 {
+    float: left;
+    width: 66.6666666667%; }
+
+  .col-lg-9 {
+    float: left;
+    width: 75%; }
+
+  .col-lg-10 {
+    float: left;
+    width: 83.3333333333%; }
+
+  .col-lg-11 {
+    float: left;
+    width: 91.6666666667%; }
+
+  .col-lg-12 {
+    float: left;
+    width: 100%; } }
 @font-face {
   font-family: 'Georgia';
-  src: url(../fonts/Georgia.ttf); }
+  src: url(../fonts/Georgia.woff); }
 * {
   margin: 0;
   padding: 0;
@@ -186,6 +312,9 @@ a {
   text-decoration: none; }
 
 body {
+  box-shadow: 0px 10px 10px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 10px 10px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 10px 10px 0 rgba(0, 0, 0, 0.2);
   font-family: Georgia, Times, "Times New Roman", serif;
   max-width: 1024px;
   margin: 0 auto;
@@ -193,13 +322,15 @@ body {
   font-size: 13px;
   color: #888888;
   font-weight: 400;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2); 
-  background: #eee;}
+  background: #eee; }
 
 h1 {
   font-size: 30px;
+  color: #121212;
+  line-height: 36px; }
+
+h2 {
+  font-size: 28px;
   color: #121212;
   line-height: 36px; }
 
@@ -209,7 +340,8 @@ h3 {
 h4 {
   font-size: 16px; }
 
-h3, h4 {
+h3,
+h4 {
   font-weight: 400;
   line-height: 35px; }
 
@@ -223,10 +355,10 @@ button, .btn {
   cursor: pointer; }
 
 .btn--primary {
-  background: #81b300;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
-  border-radius: 20px; }
+  border-radius: 20px;
+  background: #81b300; }
 
 input {
   padding: 10px;
@@ -238,7 +370,7 @@ input[type="submit"] {
   color: #81b300;
   text-transform: uppercase; }
 
-header {
+.page-header {
   background: #ffffff;
   border-top: 5px solid #81b300; }
 
@@ -254,11 +386,11 @@ header {
   border-bottom-right-radius: 20px;
   float: right; }
   .top-header .top-socials li {
-    width: 32px;
-    height: 32px;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
+    width: 32px;
+    height: 32px;
     background: #1f1f1f;
     color: #ffffff;
     text-align: center;
@@ -297,23 +429,23 @@ header {
 .search-wrapper {
   display: inline-flex; }
 
-#footer {
+.page-footer {
   background: #3b3b3b; }
-  #footer .footer-info {
+  .page-footer .footer-info {
     padding: 30px;
     color: #888888; }
-    #footer .footer-info .footer-links li {
+    .page-footer .footer-info .footer-links li {
       padding: 5px 0;
       border-bottom: 1px solid #888888; }
-      #footer .footer-info .footer-links li:first-child {
+      .page-footer .footer-info .footer-links li:first-child {
         padding-top: 0; }
-      #footer .footer-info .footer-links li a {
+      .page-footer .footer-info .footer-links li a {
         color: #888888; }
-  #footer .copyright {
+  .page-footer .copyright {
     padding: 20px 30px;
     background: #2e2e2e; }
 
-.main_service_area {
+.main-service-area {
   padding: 50px 0;
   background: #ffffff;
   text-align: center;
@@ -322,36 +454,37 @@ header {
 .grid-item .content-text h3 {
   color: #81b300;
   padding: 15px 0; }
-.grid-item .content-text h4 {
-  color: #444444; }
 .grid-item .content-text p {
   margin-bottom: 15px; }
 .grid-item .btn--primary {
   margin: 0 auto; }
 
-.latest_blog {
+.latest-blog {
   padding: 50px 0;
   background: #ffffff; }
-  .latest_blog .grid-item img {
-    max-width: 100%;
-    padding: 5px;
-    background: #ffffff;
+  .latest-blog .grid-item img {
+    box-shadow: 0px 0px 1px 1px #e2e2e2;
+    -webkit-box-shadow: 0px 0px 1px 1px #e2e2e2;
+    -moz-box-shadow: 0px 0px 1px 1px #e2e2e2;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    -webkit-box-shadow: 0px 0px 1px 1px #e2e2e2;
-    -moz-box-shadow: 0px 0px 1px 1px #e2e2e2;
-    box-shadow: 0px 0px 1px 1px #e2e2e2; }
-.head_title p {
-  color: #6A6A6A;
+    max-width: 100%;
+    padding: 5px;
+    background: #ffffff; }
+
+.head-title p {
+  color: #888888;
   font-weight: 400;
   font-size: 16px;
-  margin-bottom: 30px;}
+  margin-bottom: 30px; }
+
 .separator {
   height: 5px;
   margin: 10px auto;
   width: 100px;
-  background: #81b300;}
+  background: #81b300; }
+
 .container {
   padding: 0 30px; }
 
@@ -370,5 +503,6 @@ header {
 
 .clearfix {
   clear: both; }
-.text-center{
-  text-align: center;}
+
+.text-center {
+  text-align: center; }
