--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,41 +1,48 @@
 @font-face { 
-    font-family: 'Georgia';
-    src: url(../fonts/Georgia.ttf);
+  font-family: 'Georgia';
+  src: url(../fonts/Georgia.woff);
 }
 
-*{margin: 0;
+* {
+  margin: 0;
   padding: 0; 
   border: 0;
   outline: none;
   box-sizing: border-box;
 }
-a{
+a {
   color: $primary-color;
   text-decoration: none;
 }
-body{
-  font-family: Georgia, Times, "Times New Roman", serif;
+body {
+  @include box-shadow(0px, 10px, 10px, 0, rgba(0,0,0, .2));
+  font-family: $font-family;
   max-width: 1024px;
   margin: 0 auto;
   line-height: 20px;
   font-size: $base-font-size;
   color: $second-color;
   font-weight: $base-font-weight;
-  @include box-shadow(0px, 10px, 10px, rgba(0,0,0, .2));
-  background: #eee;
+  background: $background;
 }
-h1{
+h1 {
   font-size: 30px;
-  color: #121212;
+  color: $title-color;
   line-height: 36px;
 }
-h3{
+h2 {
+  font-size: 28px;
+  color: $title-color;
+  line-height: 36px;
+}
+h3 {
   font-size: 18px;
 }
-h4{
+h4 {
   font-size: 16px;
 }
-h3, h4{
+h3,
+h4 {
   font-weight: 400;
   line-height: 35px;
 }
