--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,66 +1,67 @@
-header{
-    background: $white-color;
-    border-top: 5px solid $primary-color;
+.page-header {
+  background: $white-color;
+  border-top: 5px solid $primary-color;
 }
-.top-header, .main-header{
-  ul li{ 
-    display: inline-block;
+.top-header,
+.main-header {
+  ul li { 
+      display: inline-block;
   }
 }
-.top-header{
-  .logo{
-    padding: 20px 0;
+.top-header {
+  .logo {
+      padding: 20px 0;
   }
-  .top-socials{
+  .top-socials {
     padding: 8px;
     background: $primary-color;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     float: right;
-    li{
+    li {
+      @include border-radius(100%);
       width: 32px;
       height: 32px;
-      @include border-radius(100%);
-      background: $background;
+      background: $background-icon;
       color: $white-color;
       text-align: center;
       cursor: pointer;
       margin: 0 10px;
-      i{
+      i {
         line-height: 32px;
       }
-      &:hover{
-        background: #00acee;
+      &:hover {
+        background: $background-icon-hover;
       }
     }
   }
 }
-.main-header{
+.main-header {
   padding: 20px 0;
   background: $primary-color;
-  .main-menu{
-    li{
+  .main-menu {
+    li {
       padding: 7px 0;
     }
     a{
       color: $white-color;
       text-transform: uppercase;
       padding-right: 15px;
-      &:hover{
+      &:hover {
         color: $second-color;
       }
     }
   }
-  .search-box{
+  .search-box {
     border: 1px solid $border-color;
-    input{
+    input {
       padding: 7px 10px;
       margin: 0;
       background: $white-color;
       border-radius: 0;
     }
   }
-  .search{
+  .search {
     border: 1px solid $border-color;
     background: $white-color;
     color: $primary-color;
@@ -68,6 +69,6 @@ header{
     text-transform: uppercase;
   }
 }
-.search-wrapper{
+.search-wrapper {
   display: inline-flex;
 }
