--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,44 +1,38 @@
-
-.main_service_area{
+.main-service-area {
   padding: 50px 0;
   background: $white-color;
   text-align: center;
   border-bottom: 1px solid $border-color;
 }
 .grid-item {
-  .content-text{
-    h3{
+  .content-text {
+    h3 {
       color: $primary-color;
       padding: 15px 0;
     }
-    h4{
-      color: #444444;
-    }
-    p{
+    p {
       margin-bottom: 15px;
     }
   }
-  .btn--primary{
+  .btn--primary {
     margin: 0 auto;
   }
 }
-.latest_blog{
+.latest-blog {
   padding: 50px 0;
   background: $white-color;
-  .grid-item{
-    img{
+  .grid-item {
+    img {
+      @include box-shadow(0px, 0px, 1px, 1px, $shadow-color);
+      @include border-radius(3px);
       max-width: 100%;
       padding: 5px;
       background: $white-color;
-      @include border-radius(3px);
-      -webkit-box-shadow: 0px 0px 1px 1px #e2e2e2;
-      -moz-box-shadow: 0px 0px 1px 1px #e2e2e2;
-      box-shadow: 0px 0px 1px 1px #e2e2e2;
     }
   }
 }
-.head_title p {
-  color: #6A6A6A;
+.head-title p {
+  color: $second-color;
   font-weight: 400;
   font-size: 16px;
   margin-bottom: 30px;
@@ -47,5 +41,5 @@
   height: 5px;
   margin: 10px auto;
   width: 100px;
-  background: #81b300;
+  background: $primary-color;
 }
