--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -22,3 +22,10 @@
   left: $left;
   position: $position;
 }
+@mixin flexbox() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
