--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,12 +5,12 @@
 .top-header,
 .main-header {
   ul li { 
-      display: inline-block;
+    display: inline-block;
   }
 }
 .top-header {
   .logo {
-      padding: 20px 0;
+    padding: 20px 0;
   }
   .top-socials {
     padding: 8px;
@@ -43,7 +43,7 @@
     li {
       padding: 7px 0;
     }
-    a{
+    a {
       color: $white-color;
       text-transform: uppercase;
       padding-right: 15px;
@@ -70,5 +70,5 @@
   }
 }
 .search-wrapper {
-  display: inline-flex;
+  @include flexbox();
 }
